Update index.html with author details and stylesheet
Added author information and linked stylesheet.

--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
-<!-- Document type declaration defines this as an HTML5 document -->
 <!DOCTYPE html>
-<html lang="en"> <!-- Sets the language attribute to English -->
+<html lang="en">
 <head>
-  <!-- Character encoding for the document -->
+     <!--
+   Author: Donald Barbato
+   Date: 10/18/2025
+   Filename: index.html
+   -->
   <meta charset="utf-8" />
   
   <!-- Title displayed on the browser tab -->
@@ -19,6 +22,9 @@
   
   <!-- Viewport setting ensures mobile responsiveness -->
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <!-- Link to stylesheet -->
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
