Add stylesheet link to index.html
Added a link to the stylesheet for styling the webpage.

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
   
   <!-- Viewport setting ensures mobile responsiveness -->
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <!-- Link to stylesheet -->
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -64,3 +67,4 @@
   </footer>
 </body>
 </html>
+
